gcc/testsuite/rust.test/fail_compilation/immutable3.rs
fn main() {
    let a = 1;
    a += 2;
}
